@@ -59,23 +59,18 @@ class LoginModelLogin extends JModel
 	 *
 	 * @since   11.1
 	 */
-	public static function &getLoginModule($name = 'login', $title = null)
+	public static function getLoginModule($name = 'mod_login', $title = null)
 	{
 		$result		= null;
-		$modules	= LoginModelLogin::_load();
+		$modules	= LoginModelLogin::_load($name);
 		$total		= count($modules);
 
 		for ($i = 0; $i < $total; $i++)
 		{
-			// Match the name of the module
-			// Even though this is normally 'login' it is possible someone will use a differnt name or module
-			if ($modules[$i]->name == $name)
-			{
-				// Match the title if we're looking for a specific instance of the module
-				if (!$title || $modules[$i]->title == $title) {
-					$result = &$modules[$i];
-					break;	// Found it
-				}
+			// Match the title if we're looking for a specific instance of the module
+			if (!$title || $modules[$i]->title == $title) {
+				$result = $modules[$i];
+				break;	// Found it
 			}
 		}
 
@@ -104,11 +99,13 @@ class LoginModelLogin extends JModel
 	 * This is put in as a failsafe to avoid super user lock out caused by an unpublished
 	 * login module or by a module set to have a viewing access level that is not Public.
 	 *
+	 * @param   string  $name   The name of the module
+	 *
 	 * @return  array
 	 *
 	 * @since   11.1
 	 */
-	protected static function &_load()
+	protected static function _load($module)
 	{
 		static $clean;
 
@@ -129,7 +126,7 @@ class LoginModelLogin extends JModel
 			$query = $db->getQuery(true);
 			$query->select('m.id, m.title, m.module, m.position, m.showtitle, m.params');
 			$query->from('#__modules AS m');
-			$query->where('m.module =' . $db->Quote('mod_login') .' AND m.client_id = 1');
+			$query->where('m.module =' . $db->Quote($module) .' AND m.client_id = 1');
 
 			$query->join('LEFT', '#__extensions AS e ON e.element = m.module AND e.client_id = m.client_id');
 			$query->where('e.enabled = 1');
@@ -153,7 +150,7 @@ class LoginModelLogin extends JModel
 
 
 			// Return to simple indexing that matches the query order.
-			$loginmodule = array_values($loginmodule);
+			$loginmodule = $modules;
 
 			$cache->store($loginmodule, $cacheid);
 		}
